Fix icons, site works on smaller screen sizes

--- a/css/one-page-wonder.css
+++ b/css/one-page-wonder.css
@@ -81,7 +81,6 @@ body {
 .small-text p{
     font-size: 14px;
     color: gray;
-    padding-right: 1300px;
 }
 
 .navbar-default {
